[tool.poetry]
name = "home"
version = "0.1.0"
description = "Manage the home automation"
authors = ["Dorian Jaminais <epa@jaminais.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio-mqtt = "^0.10.0"
argparse-logging = "^2020.11.26"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.10.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
